[package]
name = "yargs"
version = "0.2.0"
edition = "2021"
rust-version = "1.60.0" #req'd by the regex transitive dependency
authors = ["Dan (d2718) <d2718@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/d2718/yargs"
description = "A friendlier xargs replacement."

[dependencies]
bstr = "1.6.0"
regex-chunker = "0.3.0"